verificando para dar bug

--- a/transition/transition-exemplo.html
+++ b/transition/transition-exemplo.html
@@ -13,10 +13,11 @@
 <body>
 
     <form action="">
-        <input type="text" placeholder="Nome">
+        <input  placeholder="Nome">
         <input type="text" placeholder="Email">
         <button type="submit">Enviar</button>
 
+        <h2> Alteracao para dar bug</h2>
     </form>
     
 </body>
