alteracao para vwr bug

--- a/transition/transition-exemplo.html
+++ b/transition/transition-exemplo.html
@@ -17,7 +17,8 @@
         <input type="text" placeholder="Email">
         <button type="submit">Enviar</button>
 
-        <h2> Alteracao para dar bug</h2>
+        <h2> Alt
+            eracao para dar bug</h2>
     </form>
     
 </body>
